--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,8 +23,7 @@
     /* Path alias */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@shared/*": ["./src/shared/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
